--- a/wp-content/uploads/elementor/css/post-72.css
+++ b/wp-content/uploads/elementor/css/post-72.css
@@ -5,7 +5,7 @@
 .elementor-72 .elementor-element.elementor-element-ad36a23.elementor-widget-heading .elementor-heading-title {color: #fff;}
 .elementor-72 .elementor-element.elementor-element-ad36a23 .elementor-heading-title {font-weight: bold;line-height: 5.7em;text-shadow: 0px 0px 10px rgba(0,0,0,.75);}
 .elementor-72 .elementor-element.elementor-element-ad36a23 > .elementor-widget-container {margin: 76px 0px -104px 0px;}
-.elementor-72 .elementor-element.elementor-element-dc52fba .elementor-text-editor {text-align: right;}
+.elementor-72 .elementor-element.elementor-element-dc52fba .elementor-text-editor {text-align: center;}
 .elementor-72 .elementor-element.elementor-element-dc52fba {color: #fff;font-size: 36px;font-weight: 500;}
 .elementor-72 .elementor-element.elementor-element-ded70b1 .elementor-button .elementor-align-icon-right {margin-left: 9px;}
 .elementor-72 .elementor-element.elementor-element-ded70b1 .elementor-button .elementor-align-icon-left {margin-right: 9px;}
@@ -125,6 +125,7 @@
 .elementor-72 .elementor-element.elementor-element-ae1be94 {text-align: center;}
 .elementor-72 .elementor-element.elementor-element-ae1be94.elementor-widget-heading .elementor-heading-title {color: #ededed;}
 .elementor-72 .elementor-element.elementor-element-ae1be94 .elementor-heading-title {font-weight: bold;line-height: 2.5em;text-shadow: 0px 0px 10px rgba(0,0,0,.75);}
+.elementor-72 .elementor-element.elementor-element-d851c41 .elementor-image img {box-shadow: 4px 4px 7px 0px rgba(0,0,0,.5);}
 .elementor-72 .elementor-element.elementor-element-d851c41 > .elementor-widget-container {box-shadow: 0px 0px 10px 0px rgba(0,0,0,.5);}
 .elementor-72 .elementor-element.elementor-element-3071a52 {font-size: 17px;}
 .elementor-72 .elementor-element.elementor-element-50ff337:not(.elementor-motion-effects-element-type-background), .elementor-72 .elementor-element.elementor-element-50ff337 > .elementor-motion-effects-container > .elementor-motion-effects-layer {background-color: #ccc;}
