--- a/wp-content/uploads/elementor/css/post-1022.css
+++ b/wp-content/uploads/elementor/css/post-1022.css
@@ -19,6 +19,8 @@
 .elementor-1022 .elementor-element.elementor-element-d4ce2a5 .elementor-heading-title {font-weight: bold;line-height: 2.5em;text-shadow: 0px 0px 10px rgba(0,0,0,.75);}
 .elementor-1022 .elementor-element.elementor-element-172a441 .elementor-text-editor {text-align: center;}
 .elementor-1022 .elementor-element.elementor-element-172a441 {font-size: 17px;}
+.elementor-1022 .elementor-element.elementor-element-aa96c4e .elementor-alert-title {font-size: 18px;}
+.elementor-1022 .elementor-element.elementor-element-aa96c4e .elementor-alert-description {font-size: 15px;}
 .elementor-1022 .elementor-element.elementor-element-24335888.elementor-position-right .elementor-image-box-img {margin-left: 0px;}
 .elementor-1022 .elementor-element.elementor-element-24335888.elementor-position-left .elementor-image-box-img {margin-right: 0px;}
 .elementor-1022 .elementor-element.elementor-element-24335888.elementor-position-top .elementor-image-box-img {margin-bottom: 0px;}
