WP2Static UPDATE wp-content/uploads/elementor/css/post-305.css

--- a/wp-content/uploads/elementor/css/post-305.css
+++ b/wp-content/uploads/elementor/css/post-305.css
@@ -6,6 +6,10 @@
 .elementor-305 .elementor-element.elementor-element-5c3c43fb {text-align: left;}
 .elementor-305 .elementor-element.elementor-element-4bd7ecc2 .elementor-text-editor {text-align: right;}
 .elementor-305 .elementor-element.elementor-element-4bd7ecc2 {color: #ededed;font-size: 22px;}
+.elementor-305 .elementor-element.elementor-element-fa64865 {color: #3a3a3a;}
+.elementor-305 .elementor-element.elementor-element-fa64865 a {color: #3a3a3a;}
+.elementor-305 .elementor-element.elementor-element-fa64865 a:hover {color: #3a3a3a;}
+.elementor-305 .elementor-element.elementor-element-da60282 {font-size: 8px;}
 .elementor-305 .elementor-element.elementor-element-c939413 .elementor-text-editor {text-align: center;}
 .elementor-305 .elementor-element.elementor-element-c939413 {color: #fff;font-size: 10px;}
 @media (max-width:767px) {.elementor-305 .elementor-element.elementor-element-7d77ff1 {width: 50%;}
