WP2Static UPDATE wp-content/themes/hestia/style.css

--- a/wp-content/themes/hestia/style.css
+++ b/wp-content/themes/hestia/style.css
@@ -1629,3 +1629,7 @@ body.fl-builder-edit .navbar.header-with-topbar.navbar-default:not(.navbar-trans
 	.hestia-mega-menu > .dropdown-menu {display: none;}
 	.hestia-mega-menu > .dropdown-menu .divider {width: 100%;margin: 15px auto;}
 	.navbar .navbar-nav .dropdown li.hestia-mm-heading {padding: 15px 0;}}
+.page-id-1047 .menu-item-77 {display: none;}
+.page-id-1047 .menu-item-76 {display: none;}
+.page-id-1047 .menu-item-182 {display: none;}
+.page-id-1047 .menu-item-527 {display: none;}
