--- a/wp-content/uploads/elementor/css/post-305.css
+++ b/wp-content/uploads/elementor/css/post-305.css
@@ -1,18 +1,23 @@
 .elementor-305 .elementor-element.elementor-element-5f0a8f54:not(.elementor-motion-effects-element-type-background), .elementor-305 .elementor-element.elementor-element-5f0a8f54 > .elementor-motion-effects-container > .elementor-motion-effects-layer {background-color: #3a3a3a;}
 .elementor-305 .elementor-element.elementor-element-5f0a8f54 {transition: background .3s,border .3s,border-radius .3s,box-shadow .3s;padding: 0px 0px 0px 0px;}
 .elementor-305 .elementor-element.elementor-element-5f0a8f54 > .elementor-background-overlay {transition: background .3s,border-radius .3s,opacity .3s;}
-.elementor-305 .elementor-element.elementor-element-7d77ff1.elementor-column .elementor-column-wrap {align-items: center;}
-.elementor-305 .elementor-element.elementor-element-7d77ff1.elementor-column > .elementor-column-wrap > .elementor-widget-wrap {align-content: center;justify-content: flex-start;}
-.elementor-305 .elementor-element.elementor-element-5c3c43fb {text-align: left;}
-.elementor-305 .elementor-element.elementor-element-4bd7ecc2 .elementor-text-editor {text-align: right;}
-.elementor-305 .elementor-element.elementor-element-4bd7ecc2 {color: #ededed;font-size: 22px;}
+.elementor-305 .elementor-element.elementor-element-d66b214 .elementor-image img {filter: brightness(100%) contrast(100%) saturate(100%) blur(0px) hue-rotate(0deg);}
+.elementor-305 .elementor-element.elementor-element-d66b214 > .elementor-widget-container {background-color: #fff;}
+.elementor-305 .elementor-element.elementor-element-1d6b76b {color: #ededed;font-size: 10px;}
+.elementor-305 .elementor-element.elementor-element-6949c15.elementor-column .elementor-column-wrap {align-items: center;}
+.elementor-305 .elementor-element.elementor-element-6949c15.elementor-column > .elementor-column-wrap > .elementor-widget-wrap {align-content: center;justify-content: flex-start;}
+.elementor-305 .elementor-element.elementor-element-440f084 {text-align: left;}
+.elementor-305 .elementor-element.elementor-element-11d6f13 .elementor-text-editor {text-align: right;}
+.elementor-305 .elementor-element.elementor-element-11d6f13 {color: #ededed;font-size: 22px;}
 .elementor-305 .elementor-element.elementor-element-fa64865 {color: #3a3a3a;}
 .elementor-305 .elementor-element.elementor-element-fa64865 a {color: #3a3a3a;}
 .elementor-305 .elementor-element.elementor-element-fa64865 a:hover {color: #3a3a3a;}
 .elementor-305 .elementor-element.elementor-element-da60282 {font-size: 8px;}
 .elementor-305 .elementor-element.elementor-element-c939413 .elementor-text-editor {text-align: center;}
 .elementor-305 .elementor-element.elementor-element-c939413 {color: #fff;font-size: 10px;}
-@media (max-width:767px) {.elementor-305 .elementor-element.elementor-element-7d77ff1 {width: 50%;}
-	.elementor-305 .elementor-element.elementor-element-5c3c43fb .elementor-image img {width: 100%;}
-	.elementor-305 .elementor-element.elementor-element-907b3f8 {width: 50%;}
-	.elementor-305 .elementor-element.elementor-element-4bd7ecc2 {font-size: 10px;}}
+@media (max-width:767px) {.elementor-305 .elementor-element.elementor-element-6949c15 {width: 50%;}
+	.elementor-305 .elementor-element.elementor-element-440f084 .elementor-image img {width: 100%;}
+	.elementor-305 .elementor-element.elementor-element-3357914 {width: 50%;}
+	.elementor-305 .elementor-element.elementor-element-11d6f13 {font-size: 10px;}}
+@media (min-width:768px) {.elementor-305 .elementor-element.elementor-element-03c6b30 {width: 33.331%;}
+	.elementor-305 .elementor-element.elementor-element-6713215 {width: 33%;}}
